vendor/vnc/Viewer.h



/**
 * Returns the stride of the viewer framebuffer data in pixels, that is, the
 * number of pixels from the start of each row until the start of the next.
 *
 * @param viewer The Viewer.
 *
 * @return The stride in pixels.
 */
VNC_SDK_API int vnc_Viewer_getViewerFbStride(vnc_Viewer* viewer);



/**
 * @}
 * @name Functions for managing server events
 * @{
 */


/** Callback receiving server event notifications for a Viewer. */
typedef struct {
  /**
   * Notification that the server's clipboard contains new text.  This
   * callback is optional.
   *
   * @param text The UTF-8 encoded text.
   */
  void
  (*serverClipboardTextChanged)(void* userData,
                                vnc_Viewer* viewer,
                                const char* text);

  /**
   * Notification that the server's friendly name has changed.  This callback is
   * optional.
   *
   * @param name The UTF-8 encoded name.
   */
  void
  (*serverFriendlyNameChanged)(void* userData,
                               vnc_Viewer* viewer,
                               const char* name);
} vnc_Viewer_ServerEventCallback;


/**
 * Sets the server event callback for this viewer.
 *
 * @param viewer The Viewer.
 * @param callback The new server event callback.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The callback is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setServerEventCallback(
    vnc_Viewer* viewer,
    _In_opt_ const vnc_Viewer_ServerEventCallback* callback,
    void* userData);



/**
 * @}
 * @name Functions for sending input
 * @{
 */

/**
 * Copies the given text to the server's clipboard.
 *
 * @param viewer The Viewer.
 * @param text The UTF-8 encoded text.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     @p text is NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendClipboardText(vnc_Viewer* viewer,
                             const char* text);


/**
 * Enumeration of mouse buttons.  Here "left" and "right" refer to logical
 * buttons, which may not correspond to the physical orientation of the buttons
 * if using a left-handed mouse.
 */
typedef enum {
  /** The logical left mouse button. */
  vnc_Viewer_MouseButtonLeft = 1,
  /** The logical middle mouse button. */
  vnc_Viewer_MouseButtonMiddle = 2,
  /** The logical right mouse button. */
  vnc_Viewer_MouseButtonRight = 4,
} vnc_Viewer_MouseButton;


/**
 * Sends a pointer event to the server.  If @p rel is #vnc_false then @p x and
 * @p y give the absolute position of the mouse pointer in viewer framebuffer
 * coordinates with 0,0 at the top-left of the framebuffer.  If @p rel is
 * #vnc_true then @p x and @p y give the relative movement delta in "mickeys".
 *
 * Attempting to use coordinates outside of the viewer framebuffer will result in
 * an undefined behaviour.
 *
 * @param viewer The Viewer.
 * @param x The X coordinate.
 * @param y The Y coordinate.
 * @param buttonState A bitmask containing zero or more of
 *     @ref vnc_Viewer_MouseButtonLeft, @ref vnc_Viewer_MouseButtonMiddle and
 *     @ref vnc_Viewer_MouseButtonRight, indicating which buttons are down, if
 *     any.
 * @param rel Whether the event is relative or absolute.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     @p buttonState is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendPointerEvent(vnc_Viewer* viewer, int x, int y,
                            int buttonState,
                            vnc_bool_t rel);


/** Enumeration of mouse wheel directions. */
typedef enum {
  /** The horizontal scroll wheel. */
  vnc_Viewer_MouseWheelHorizontal = 1,
  /** The vertical scroll wheel. */
  vnc_Viewer_MouseWheelVertical = 2,
} vnc_Viewer_MouseWheel;


/**
 * Sends a scroll wheel event to the server.
 *
 * @param viewer The Viewer.
 * @param delta The number of scroll wheel "ticks".  You may need to reduce the
 *     value provided by a high-resolution scroll device to get appropriate
 *     behavior (for example, one tick is equivalent to a distance of 120 in the
 *     Win32 API).  If @p delta is negative then the movement is upwards or
 *     towards the left, if positive then the movement is downwards or towards
 *     the right.
 * @param axis The scroll axis (either @ref vnc_Viewer_MouseWheelHorizontal or
 *     @ref vnc_Viewer_MouseWheelVertical).
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     @p axis is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendScrollEvent(vnc_Viewer* viewer,
                           int delta,
                           vnc_Viewer_MouseWheel axis);


/**
 * Sends a key down (press) event to the server.
 *
 * @param viewer The Viewer.
 * @param keysym The keysym value representing the meaning of the pressed key.
 *   Use vnc_unicodeToKeysym() to convert a unicode character to a keysym.  See
 *   vnc/Keyboard.h for common keysym values for non-character keys.
 * @param keyCode An integer code representing the physical key which has been
 *   pressed.  The SDK only uses this to match up the corresponding call to
 *   vnc_Viewer_sendKeyUp().
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendKeyDown(vnc_Viewer* viewer,
                       vnc_uint31_t keysym,
                       int keyCode);


/**
 * Sends a key up (release) event to the server.
 *
 * @param viewer The Viewer.
 * @param keyCode An integer code representing the physical key which has been
 *   released.  If there was no prior call to vnc_Viewer_sendKeyDown() for this
 *   @p keyCode, it is simply ignored.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 */
VNC_SDK_API vnc_status_t vnc_Viewer_sendKeyUp(vnc_Viewer* viewer,
                                              int keyCode);


/**
 * Send key up events for all currently pressed keys.  Typically you call this
 * when the viewer loses keyboard focus.
 *
 * @param viewer The Viewer.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 */
VNC_SDK_API vnc_status_t vnc_Viewer_releaseAllKeys(vnc_Viewer* viewer);



/**
 * @}
 * @name Functions for managing connection negotiation
 * @{
 */

/** Callback receiving requests for authentication for a Viewer. */
typedef struct {
  /**
   * Request for a username and/or password.  Implementors should reply with a
   * username and/or password either immediately or later, by calling
   * vnc_Viewer_sendAuthenticationResponse().  This callback function is
   * required if using a @ref vnc_Viewer_AuthenticationCallback.
   * This callback will not be triggered if no credentials are required.
   *
   * @param needUser Whether a username must be supplied.
   * @param needPasswd Whether a password must be supplied.
   */
  void (*requestUserCredentials)(void* userData,
                                 vnc_Viewer* viewer,
                                 vnc_bool_t needUser,
                                 vnc_bool_t needPasswd);

  /**
   * Notification to cancel a username and/or password request.  This can happen
   * if the server closes the connection while the Viewer is waiting for the
   * user to provide a username/password.  This callback is optional.
   */
  void
  (*cancelUserCredentialsRequest)(void* userData,
                                  vnc_Viewer* viewer);
} vnc_Viewer_AuthenticationCallback;


/**
 * Provides the SDK with the result of a username/password request.
 *
 * @param viewer The Viewer.
 * @param ok This should be #vnc_false if the user cancelled the password
 *     dialog.
 * @param user This must not be NULL if @p needUser was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 * @param passwd This must not be NULL if @p needPasswd was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval UnexpectedCall
 *     The session is not waiting for a username/password response
 *
 * @retval InvalidArgument
 *     @c user or @c passwd was requested but is NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendAuthenticationResponse(vnc_Viewer* viewer,
                                      vnc_bool_t ok,
                                      _In_opt_z_ const char* user,
                                      _In_opt_z_ const char* passwd);