src/viewer.rs

extern "C" {
    #[doc = " Returns the stride of the viewer framebuffer data in pixels, that is, the"]
    #[doc = " number of pixels from the start of each row until the start of the next."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = ""]
    #[doc = " @return The stride in pixels."]
    pub fn vnc_Viewer_getViewerFbStride(viewer: *mut vnc_Viewer) -> ::std::os::raw::c_int;
}
#[doc = " Callback receiving server event notifications for a Viewer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Viewer_ServerEventCallback {
    #[doc = " Notification that the server's clipboard contains new text.  This"]
    #[doc = " callback is optional."]
    #[doc = ""]
    #[doc = " @param text The UTF-8 encoded text."]
    pub serverClipboardTextChanged: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            text: *const ::std::os::raw::c_char,
        ),
    >,
    #[doc = " Notification that the server's friendly name has changed.  This callback is"]
    #[doc = " optional."]
    #[doc = ""]
    #[doc = " @param name The UTF-8 encoded name."]
    pub serverFriendlyNameChanged: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            name: *const ::std::os::raw::c_char,
        ),
    >,
}
#[test]
fn bindgen_test_layout_vnc_Viewer_ServerEventCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Viewer_ServerEventCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Viewer_ServerEventCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Viewer_ServerEventCallback>(),
        8usize,
        concat!("Alignment of ", stringify!(vnc_Viewer_ServerEventCallback))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_ServerEventCallback>())).serverClipboardTextChanged
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_ServerEventCallback),
            "::",
            stringify!(serverClipboardTextChanged)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_ServerEventCallback>())).serverFriendlyNameChanged
                as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_ServerEventCallback),
            "::",
            stringify!(serverFriendlyNameChanged)
        )
    );
}
extern "C" {
    #[doc = " Sets the server event callback for this viewer."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param callback The new server event callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The callback is invalid"]
    pub fn vnc_Viewer_setServerEventCallback(
        viewer: *mut vnc_Viewer,
        callback: *const vnc_Viewer_ServerEventCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Copies the given text to the server's clipboard."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param text The UTF-8 encoded text."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p text is NULL"]
    pub fn vnc_Viewer_sendClipboardText(
        viewer: *mut vnc_Viewer,
        text: *const ::std::os::raw::c_char,
    ) -> vnc_status_t;
}
#[doc = " The logical left mouse button."]
pub const vnc_Viewer_MouseButton_vnc_Viewer_MouseButtonLeft: vnc_Viewer_MouseButton = 1;
#[doc = " The logical middle mouse button."]
pub const vnc_Viewer_MouseButton_vnc_Viewer_MouseButtonMiddle: vnc_Viewer_MouseButton = 2;
#[doc = " The logical right mouse button."]
pub const vnc_Viewer_MouseButton_vnc_Viewer_MouseButtonRight: vnc_Viewer_MouseButton = 4;
#[doc = " Enumeration of mouse buttons.  Here \"left\" and \"right\" refer to logical"]
#[doc = " buttons, which may not correspond to the physical orientation of the buttons"]
#[doc = " if using a left-handed mouse."]
pub type vnc_Viewer_MouseButton = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Sends a pointer event to the server.  If @p rel is #vnc_false then @p x and"]
    #[doc = " @p y give the absolute position of the mouse pointer in viewer framebuffer"]
    #[doc = " coordinates with 0,0 at the top-left of the framebuffer.  If @p rel is"]
    #[doc = " #vnc_true then @p x and @p y give the relative movement delta in \"mickeys\"."]
    #[doc = ""]
    #[doc = " Attempting to use coordinates outside of the viewer framebuffer will result in"]
    #[doc = " an undefined behaviour."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param x The X coordinate."]
    #[doc = " @param y The Y coordinate."]
    #[doc = " @param buttonState A bitmask containing zero or more of"]
    #[doc = "     @ref vnc_Viewer_MouseButtonLeft, @ref vnc_Viewer_MouseButtonMiddle and"]
    #[doc = "     @ref vnc_Viewer_MouseButtonRight, indicating which buttons are down, if"]
    #[doc = "     any."]
    #[doc = " @param rel Whether the event is relative or absolute."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p buttonState is invalid"]
    pub fn vnc_Viewer_sendPointerEvent(
        viewer: *mut vnc_Viewer,
        x: ::std::os::raw::c_int,
        y: ::std::os::raw::c_int,
        buttonState: ::std::os::raw::c_int,
        rel: vnc_bool_t,
    ) -> vnc_status_t;
}
#[doc = " The horizontal scroll wheel."]
pub const vnc_Viewer_MouseWheel_vnc_Viewer_MouseWheelHorizontal: vnc_Viewer_MouseWheel = 1;
#[doc = " The vertical scroll wheel."]
pub const vnc_Viewer_MouseWheel_vnc_Viewer_MouseWheelVertical: vnc_Viewer_MouseWheel = 2;
#[doc = " Enumeration of mouse wheel directions."]
pub type vnc_Viewer_MouseWheel = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Sends a scroll wheel event to the server."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param delta The number of scroll wheel \"ticks\".  You may need to reduce the"]
    #[doc = "     value provided by a high-resolution scroll device to get appropriate"]
    #[doc = "     behavior (for example, one tick is equivalent to a distance of 120 in the"]
    #[doc = "     Win32 API).  If @p delta is negative then the movement is upwards or"]
    #[doc = "     towards the left, if positive then the movement is downwards or towards"]
    #[doc = "     the right."]
    #[doc = " @param axis The scroll axis (either @ref vnc_Viewer_MouseWheelHorizontal or"]
    #[doc = "     @ref vnc_Viewer_MouseWheelVertical)."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p axis is invalid"]
    pub fn vnc_Viewer_sendScrollEvent(
        viewer: *mut vnc_Viewer,
        delta: ::std::os::raw::c_int,
        axis: vnc_Viewer_MouseWheel,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Sends a key down (press) event to the server."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param keysym The keysym value representing the meaning of the pressed key."]
    #[doc = "   Use vnc_unicodeToKeysym() to convert a unicode character to a keysym.  See"]
    #[doc = "   vnc/Keyboard.h for common keysym values for non-character keys."]
    #[doc = " @param keyCode An integer code representing the physical key which has been"]
    #[doc = "   pressed.  The SDK only uses this to match up the corresponding call to"]
    #[doc = "   vnc_Viewer_sendKeyUp()."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    pub fn vnc_Viewer_sendKeyDown(
        viewer: *mut vnc_Viewer,
        keysym: vnc_uint31_t,
        keyCode: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Sends a key up (release) event to the server."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param keyCode An integer code representing the physical key which has been"]
    #[doc = "   released.  If there was no prior call to vnc_Viewer_sendKeyDown() for this"]
    #[doc = "   @p keyCode, it is simply ignored."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    pub fn vnc_Viewer_sendKeyUp(
        viewer: *mut vnc_Viewer,
        keyCode: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Send key up events for all currently pressed keys.  Typically you call this"]
    #[doc = " when the viewer loses keyboard focus."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    pub fn vnc_Viewer_releaseAllKeys(viewer: *mut vnc_Viewer) -> vnc_status_t;
}
#[doc = " Callback receiving requests for authentication for a Viewer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Viewer_AuthenticationCallback {
    #[doc = " Request for a username and/or password.  Implementors should reply with a"]
    #[doc = " username and/or password either immediately or later, by calling"]
    #[doc = " vnc_Viewer_sendAuthenticationResponse().  This callback function is"]
    #[doc = " required if using a @ref vnc_Viewer_AuthenticationCallback."]
    #[doc = " This callback will not be triggered if no credentials are required."]
    #[doc = ""]
    #[doc = " @param needUser Whether a username must be supplied."]
    #[doc = " @param needPasswd Whether a password must be supplied."]
    pub requestUserCredentials: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            needUser: vnc_bool_t,
            needPasswd: vnc_bool_t,
        ),
    >,
    #[doc = " Notification to cancel a username and/or password request.  This can happen"]
    #[doc = " if the server closes the connection while the Viewer is waiting for the"]
    #[doc = " user to provide a username/password.  This callback is optional."]
    pub cancelUserCredentialsRequest: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, viewer: *mut vnc_Viewer),
    >,
}
